--- a/model.ipynb
+++ b/model.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/skimage/io/manage_plugins.py:23: UserWarning: Your installed pillow version is < 8.1.2. Several security issues (CVE-2021-27921, CVE-2021-25290, CVE-2021-25291, CVE-2021-25293, and more) have been fixed in pillow 8.1.2 or higher. We recommend to upgrade this library.\n",
-      "  from .collection import imread_collection_wrapper\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from torchvision import transforms\n",
@@ -29,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +91,76 @@
     "            cropped_scene_img = self.transform(cropped_scene_img)\n",
     "\n",
     "        return scene_img, product_img, cropped_scene_img, self.get_category(idx), row['label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CTLModel(torch.nn.Module):\n",
+    "    def __init__(self, feature_extractor, attention_mechanism, similarity):\n",
+    "        super(CTLModel, self).__init__()\n",
+    "        self.feature_extractor = feature_extractor\n",
+    "        self.attention_mechanism = attention_mechanism\n",
+    "        self.similarity = similarity\n",
+    "    \n",
+    "    def forward(self, scene_img, product_img):\n",
+    "        # extract features\n",
+    "        scene_features = self.feature_extractor(scene_img)\n",
+    "        product_features = self.feature_extractor(product_img)\n",
+    "\n",
+    "        # apply self-attention\n",
+    "        scene_features, scene_attn_weights = self.attention_mechanism(scene_features)\n",
+    "        product_features, product_attn_weights = self.attention_mechanism(product_features)\n",
+    "\n",
+    "        # compute similarity\n",
+    "        compatability_scores = self.similarity(scene_features, product_features)\n",
+    "\n",
+    "        return compatability_scores, scene_attn_weights, product_attn_weights\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load pretrained resnet50 for feature extraction\n",
+    "resnet = resnet50(weights=ResNet50_Weights.IMAGENET1K_V2)\n",
+    "resnet = torch.nn.Sequential(*(list(resnet.children())[:-1]))\n",
+    "resnet.eval()\n",
+    "\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize(256),\n",
+    "    transforms.CenterCrop(224),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
+    "])\n",
+    "\n",
+    "class SelfAttention(torch.nn.Module):\n",
+    "    def __init__(self, input_dim):\n",
+    "        super(SelfAttention, self).__init__()\n",
+    "        self.query = torch.nn.Linear(input_dim, input_dim)\n",
+    "        self.key = torch.nn.Linear(input_dim, input_dim)\n",
+    "        self.value = torch.nn.Linear(input_dim, input_dim)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        q = self.query(x)\n",
+    "        k = self.key(x)\n",
+    "        v = self.value(x)\n",
+    "\n",
+    "        attn_weights = torch.nn.functional.softmax(q @ k.transpose(-2, -1) / math.sqrt(k.shape[-1]), dim=-1)\n",
+    "        output = attn_weights @ v\n",
+    "\n",
+    "        return output, attn_weights\n",
+    "\n",
+    "def cos_sim(scene_features, product_features):\n",
+    "    return torch.nn.functional.cosine_similarity(scene_features, product_features, dim=-1)\n",
+    "\n",
+    "model = CTLModel(feature_extractor=resnet, attention_mechanism=SelfAttention(2048), similarity=cos_sim)"
    ]
   }
  ],
