finished data prep pipeline

--- a/prep_data.ipynb
+++ b/prep_data.ipynb
@@ -135,7 +135,7 @@
     "category_to_product = {}\n",
     "for row in fashion.itertuples():\n",
     "    product_id = row.product\n",
-    "    category = categories[product_id]\n",
+    "    category = categories[product_id].split('|')[-1]\n",
     "    if category not in category_to_product:\n",
     "        category_to_product[category] = []\n",
     "    category_to_product[category].append(product_id)\n"
@@ -150,7 +150,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 44%|████▎     | 31488/72198 [09:45<24:43, 27.44it/s] "
+      "100%|██████████| 72198/72198 [49:43<00:00, 24.20it/s]  \n"
      ]
     }
    ],
@@ -172,7 +172,7 @@
     "    for j in range(3):\n",
     "        # pick random product that is the same category\n",
     "        rand_product = random.choice(category_to_product[category])\n",
-    "        # check if product is in same scene and \n",
+    "        # check if product is in same scene\n",
     "        if rand_product in scene_to_product[scene_id]:\n",
     "            continue\n",
     "        else:\n",
@@ -181,7 +181,27 @@
     "\n",
     "\n",
     "# save to csv\n",
-    "ctl_data.to_csv(DATA_PATH + 'ctl/ctl_data.csv', index=False)"
+    "ctl_data.to_csv(DATA_PATH + 'ctl/data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Shoes', 'Handbags, Wallets & Cases', 'Pants', 'Shirts & Tops', 'Sunglasses', 'Coats & Jackets', 'Earrings', 'Shorts', 'Skirts', 'Necklaces'])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "category_to_product.keys()"
    ]
   },
   {
