first iteration of model

--- a/model.ipynb
+++ b/model.ipynb
@@ -2,53 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torch.nn import BCEWithLogitsLoss\n",
+    "\n",
     "from torchvision import transforms\n",
     "from torchvision.models import resnet50, ResNet50_Weights\n",
-    "from torch.utils.data import Dataset\n",
+    "\n",
     "from skimage import io\n",
+    "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import math\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "\n",
     "DATA_PATH = './data/ctl/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def crop_img(image, bbox):\n",
-    "    image = Image.fromarray(image)\n",
-    "    width, height = image.size\n",
-    "    left = bbox[0] * width\n",
-    "    top = bbox[1] * height\n",
-    "    right = bbox[2] * width\n",
-    "    bottom = bbox[3] * height\n",
-    "\n",
-    "    regions = [\n",
-    "        (0, 0, width, top),\n",
-    "        (0, bottom, width, height),\n",
-    "        (0, 0, left, height),\n",
-    "        (right, 0, width, height),\n",
-    "    ]\n",
-    "\n",
-    "    largest_region = max(regions, key=lambda r: (r[2]-r[0]) * (r[3]-r[1]))\n",
-    "\n",
-    "    cropped_image = image.crop(largest_region)\n",
-    "\n",
-    "    return cropped_image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,27 +56,54 @@
     "        if local:\n",
     "            return io.imread(DATA_PATH + \"/imgs/\" + signature + \".png\")\n",
     "        else:\n",
-    "            return io.imread(convert_to_url(signature))\n",
+    "            return io.imread(self.convert_to_url(signature))\n",
+    "\n",
+    "    def _crop_img(self, image, bbox):\n",
+    "        width, height = image.shape[1], image.shape[0]\n",
+    "        left = bbox[0] * width\n",
+    "        top = bbox[1] * height\n",
+    "        right = bbox[2] * width\n",
+    "        bottom = bbox[3] * height\n",
+    "\n",
+    "        regions = [\n",
+    "            (0, 0, width, top),\n",
+    "            (0, bottom, width, height),\n",
+    "            (0, 0, left, height),\n",
+    "            (right, 0, width, height),\n",
+    "        ]\n",
+    "\n",
+    "        largest_region = max(regions, key=lambda r: (r[2]-r[0]) * (r[3]-r[1]))\n",
+    "        \n",
+    "        largest_region = [int(x) for x in largest_region]\n",
+    "\n",
+    "        cropped_image = image[largest_region[1]:largest_region[3], largest_region[0]:largest_region[2]]\n",
+    "\n",
+    "        return cropped_image\n",
     "    \n",
     "    def __getitem__(self, idx):\n",
     "        row = self.data.iloc[idx]\n",
     "\n",
-    "        scene_img = get_image(row['scene_id'])\n",
-    "        product_img = get_image(row['product_id'])\n",
-    "        cropped_scene_img = crop_img(scene_img, row['bbox'])\n",
-    "        \n",
+    "        scene_img = self.get_image(row['scene_id'])\n",
+    "        product_img = self.get_image(row['product_id'])\n",
+    "        bbox = [float(x) for x in row['bbox'][1:-1].split(',')]\n",
+    "        cropped_scene_img = self._crop_img(scene_img, bbox)\n",
     "\n",
+    "        scene_img = torch.from_numpy(scene_img)\n",
+    "        product_img = torch.from_numpy(product_img)\n",
+    "        cropped_scene_img = torch.from_numpy(cropped_scene_img)\n",
+    "        \n",
     "        if self.transform:\n",
     "            scene_img = self.transform(scene_img)\n",
     "            product_img = self.transform(product_img)\n",
     "            cropped_scene_img = self.transform(cropped_scene_img)\n",
     "\n",
-    "        return scene_img, product_img, cropped_scene_img, self.get_category(idx), row['label']"
+    "\n",
+    "        return scene_img, product_img, cropped_scene_img, torch.tensor(self.get_category(idx)), torch.tensor(row['label'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +142,7 @@
     "resnet.eval()\n",
     "\n",
     "transform = transforms.Compose([\n",
-    "    transforms.Resize(256),\n",
+    "    transforms.Resize(256, antialias=True),\n",
     "    transforms.CenterCrop(224),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
@@ -158,9 +166,90 @@
     "        return output, attn_weights\n",
     "\n",
     "def cos_sim(scene_features, product_features):\n",
-    "    return torch.nn.functional.cosine_similarity(scene_features, product_features, dim=-1)\n",
-    "\n",
+    "    return torch.nn.functional.cosine_similarity(scene_features, product_features, dim=-1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "model = CTLModel(feature_extractor=resnet, attention_mechanism=SelfAttention(2048), similarity=cos_sim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(DATA_PATH + 'data.csv')\n",
+    "\n",
+    "split = 0.8\n",
+    "train_df = df[int(split * len(df)):]\n",
+    "test_df = df[:int(split * len(df))]\n",
+    "\n",
+    "train_dataset = CTLData(train_df, transform)\n",
+    "train_data_loader = DataLoader(train_dataset, batch_size=32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cpu')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_fn = BCEWithLogitsLoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "num_epochs = 10\n",
+    "losses = []\n",
+    "for epoch in range(num_epochs):\n",
+    "    for _, product_img, cropped_scene_img, _, label in tqdm(train_data_loader):\n",
+    "        product_img = product_img.to(device)\n",
+    "        cropped_scene_img = cropped_scene_img.to(device)\n",
+    "        label = label.float().to(device)\n",
+    "\n",
+    "        # forward\n",
+    "        output = model(cropped_scene_img, product_img)\n",
+    "\n",
+    "        loss = loss_fn(output, label)\n",
+    "\n",
+    "        # backward\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "    print(f'Epoch [{epoch + 1}/{num_epochs}], Loss: {loss.item():.4f}')\n",
+    "    losses.append(loss.item())\n",
+    "\n",
+    "# plot losses\n",
+    "plt.plot(losses)\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.show()\n"
    ]
   }
  ],
