add local patch processing

--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,6 @@
     "from torchvision import transforms\n",
     "from torchvision.models import resnet50, ResNet50_Weights\n",
     "\n",
-    "from skimage import io\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -23,6 +21,8 @@
     "\n",
     "from tqdm import tqdm\n",
     "\n",
+    "import requests\n",
+    "from PIL import Image\n",
     "\n",
     "DATA_PATH = './data/ctl/'"
    ]
@@ -30,6 +30,27 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cpu')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,14 +73,12 @@
     "        prefix = 'http://i.pinimg.com/400x/%s/%s/%s/%s.jpg'\n",
     "        return prefix % (signature[0:2], signature[2:4], signature[4:6], signature)\n",
     "\n",
-    "    def get_image(self, signature, local=False):\n",
-    "        if local:\n",
-    "            return io.imread(DATA_PATH + \"/imgs/\" + signature + \".png\")\n",
-    "        else:\n",
-    "            return io.imread(self.convert_to_url(signature))\n",
+    "    def get_image(self, signature):\n",
+    "        url = self.convert_to_url(signature)\n",
+    "        return Image.open(requests.get(url, stream=True).raw)\n",
     "\n",
     "    def _crop_img(self, image, bbox):\n",
-    "        width, height = image.shape[1], image.shape[0]\n",
+    "        width, height = image.size\n",
     "        left = bbox[0] * width\n",
     "        top = bbox[1] * height\n",
     "        right = bbox[2] * width\n",
@@ -74,9 +93,7 @@
     "\n",
     "        largest_region = max(regions, key=lambda r: (r[2]-r[0]) * (r[3]-r[1]))\n",
     "        \n",
-    "        largest_region = [int(x) for x in largest_region]\n",
-    "\n",
-    "        cropped_image = image[largest_region[1]:largest_region[3], largest_region[0]:largest_region[2]]\n",
+    "        cropped_image = image.crop(largest_region)\n",
     "\n",
     "        return cropped_image\n",
     "    \n",
@@ -88,9 +105,9 @@
     "        bbox = [float(x) for x in row['bbox'][1:-1].split(',')]\n",
     "        cropped_scene_img = self._crop_img(scene_img, bbox)\n",
     "\n",
-    "        scene_img = torch.from_numpy(scene_img)\n",
-    "        product_img = torch.from_numpy(product_img)\n",
-    "        cropped_scene_img = torch.from_numpy(cropped_scene_img)\n",
+    "        # scene_img = torch.from_numpy(np.array(scene_img))\n",
+    "        # product_img = torch.from_numpy(np.array(product_img))\n",
+    "        # cropped_scene_img = torch.from_numpy(np.array(cropped_scene_img))\n",
     "        \n",
     "        if self.transform:\n",
     "            scene_img = self.transform(scene_img)\n",
@@ -98,36 +115,7 @@
     "            cropped_scene_img = self.transform(cropped_scene_img)\n",
     "\n",
     "\n",
-    "        return scene_img, product_img, cropped_scene_img, torch.tensor(self.get_category(idx)), torch.tensor(row['label'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class CTLModel(torch.nn.Module):\n",
-    "    def __init__(self, feature_extractor, attention_mechanism, similarity):\n",
-    "        super(CTLModel, self).__init__()\n",
-    "        self.feature_extractor = feature_extractor\n",
-    "        self.attention_mechanism = attention_mechanism\n",
-    "        self.similarity = similarity\n",
-    "    \n",
-    "    def forward(self, scene_img, product_img):\n",
-    "        # extract features\n",
-    "        scene_features = self.feature_extractor(scene_img)\n",
-    "        product_features = self.feature_extractor(product_img)\n",
-    "\n",
-    "        # apply self-attention\n",
-    "        scene_features, scene_attn_weights = self.attention_mechanism(scene_features)\n",
-    "        product_features, product_attn_weights = self.attention_mechanism(product_features)\n",
-    "\n",
-    "        # compute similarity\n",
-    "        compatability_scores = self.similarity(scene_features, product_features)\n",
-    "\n",
-    "        return compatability_scores, scene_attn_weights, product_attn_weights\n",
-    "\n"
+    "        return product_img, cropped_scene_img, torch.tensor(self.get_category(idx)), torch.tensor(row['label'])\n"
    ]
   },
   {
@@ -136,37 +124,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load pretrained resnet50 for feature extraction\n",
-    "resnet = resnet50(weights=ResNet50_Weights.IMAGENET1K_V2)\n",
-    "resnet = torch.nn.Sequential(*(list(resnet.children())[:-1]))\n",
-    "resnet.eval()\n",
+    "class CTLModel(torch.nn.Module):\n",
+    "    def __init__(self, feature_extractor, attention_mechanism, similarity, embed_dim=128):\n",
+    "        super(CTLModel, self).__init__()\n",
+    "        self.feature_extractor = feature_extractor\n",
     "\n",
-    "transform = transforms.Compose([\n",
-    "    transforms.Resize(256, antialias=True),\n",
-    "    transforms.CenterCrop(224),\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
-    "])\n",
+    "        # two layer feed forward network to tranform features into d-dim embedding with unit length\n",
+    "        # Linear-BN-Relu-Dropout-Linear-Norm\n",
+    "        self.feed_forward = torch.nn.Sequential(\n",
+    "            torch.nn.Linear(1000, embed_dim),\n",
+    "            torch.nn.BatchNorm1d(embed_dim),\n",
+    "            torch.nn.ReLU(),\n",
+    "            torch.nn.Dropout(0.5),\n",
+    "            torch.nn.Linear(embed_dim, embed_dim),\n",
+    "            torch.nn.BatchNorm1d(embed_dim),\n",
+    "            torch.nn.ReLU(),\n",
+    "        )\n",
     "\n",
-    "class SelfAttention(torch.nn.Module):\n",
-    "    def __init__(self, input_dim):\n",
-    "        super(SelfAttention, self).__init__()\n",
-    "        self.query = torch.nn.Linear(input_dim, input_dim)\n",
-    "        self.key = torch.nn.Linear(input_dim, input_dim)\n",
-    "        self.value = torch.nn.Linear(input_dim, input_dim)\n",
+    "        self.attention_mechanism = attention_mechanism\n",
+    "        self.similarity = similarity\n",
+    "    \n",
+    "    def forward(self, scene_img, product_img, category):\n",
+    "        fig, ax = plt.subplots(1, 2)\n",
+    "        ax[0].imshow(scene_img[0].permute(1, 2, 0).cpu().detach().numpy())\n",
+    "        ax[1].imshow(product_img[0].permute(1, 2, 0).cpu().detach().numpy())\n",
+    "        plt.show()\n",
     "\n",
-    "    def forward(self, x):\n",
-    "        q = self.query(x)\n",
-    "        k = self.key(x)\n",
-    "        v = self.value(x)\n",
+    "        # extract global features and embed\n",
+    "        scene_features = self.feature_extractor(scene_img).to(device)\n",
+    "        product_features = self.feature_extractor(product_img).to(device)\n",
     "\n",
-    "        attn_weights = torch.nn.functional.softmax(q @ k.transpose(-2, -1) / math.sqrt(k.shape[-1]), dim=-1)\n",
-    "        output = attn_weights @ v\n",
+    "        scene_embedding = self.feed_forward(scene_features)\n",
+    "        product_embedding = self.feed_forward(product_features)\n",
     "\n",
-    "        return output, attn_weights\n",
+    "        # extract local features for n patches of scene\n",
+    "        n = 8\n",
+    "        # find patch size for scene image\n",
+    "        patch_size_x = scene_img.shape[2] // n\n",
+    "        patch_size_y = scene_img.shape[3] // n\n",
+    "        patch_embeddings = []\n",
+    "        for i in range(n):\n",
+    "            for j in range(n):\n",
+    "                patch = scene_img[:, :, i*patch_size_x:(i+1)*patch_size_x, j*patch_size_y:(j+1)*patch_size_y]\n",
+    "                # visualize patches\n",
+    "                plt.imshow(patch[0].permute(1, 2, 0).cpu().detach().numpy())\n",
+    "                patch_embedding = self.feed_forward(self.feature_extractor(patch))\n",
+    "                patch_embeddings.append(patch_embedding)\n",
     "\n",
-    "def cos_sim(scene_features, product_features):\n",
-    "    return torch.nn.functional.cosine_similarity(scene_features, product_features, dim=-1)\n"
+    "        \n",
+    "        # compute attention weights for the scene patches \n",
+    "        attention = self.attention_mechanism(patch_embeddings, product_embedding, category)\n",
+    "\n",
+    "        # compute global similarity\n",
+    "        global_similarity = self.similarity(scene_embedding, product_embedding)\n",
+    "\n",
+    "        # compute local similarity sum over similarity of each patch weighted by attention with product\n",
+    "        local_similarity = sum([self.similarity(patch_embedding, product_embedding) * attention[i] for i, patch_embedding in enumerate(patch_embeddings)])\n",
+    "\n",
+    "        compatability = 0.5 * (global_similarity + local_similarity)\n",
+    "\n",
+    "        return compatability\n",
+    "\n"
    ]
   },
   {
@@ -175,12 +193,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = CTLModel(feature_extractor=resnet, attention_mechanism=SelfAttention(2048), similarity=cos_sim)"
+    "# load pretrained resnet50 for feature extraction\n",
+    "resnet = resnet50(weights=ResNet50_Weights.IMAGENET1K_V2)\n",
+    "# resnet = torch.nn.Sequential(*(list(resnet.children())[:-1]))\n",
+    "resnet.eval()\n",
+    "if torch.cuda.is_available():\n",
+    "    resnet = resnet.cuda()\n",
+    "\n",
+    "\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize(256, \n",
+    "                      interpolation=Image.NEAREST, \n",
+    "                      antialias=True),\n",
+    "    transforms.CenterCrop(224),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
+    "])\n",
+    "\n",
+    "class Attention(torch.nn.Module):\n",
+    "    def __init__(self, embed_dim=128, num_categories=10):\n",
+    "        super(Attention, self).__init__()\n",
+    "        self.embed_dim = embed_dim\n",
+    "        self.category_embeddings = torch.nn.Embedding(num_categories, embed_dim)\n",
+    "\n",
+    "    def forward(self, patch_embeddings, product_embedding, category):\n",
+    "        category_embedding = self.category_embeddings(category)\n",
+    "        attentions = [-torch.norm(patch_embedding - category_embedding, dim=-1) for patch_embedding in patch_embeddings]\n",
+    "        attentions = torch.nn.functional.softmax(torch.stack(attentions), dim=0)\n",
+    "        return attentions\n",
+    "\n",
+    "\n",
+    "def cos_sim(scene_features, product_features):\n",
+    "    return torch.nn.functional.cosine_similarity(scene_features, product_features, dim=-1)\n",
+    "\n",
+    "def l2_sim(scene_features, product_features):\n",
+    "    return -torch.norm(scene_features - product_features, dim=-1)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = CTLModel(feature_extractor=resnet, attention_mechanism=Attention(), similarity=l2_sim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,28 +252,10 @@
     "test_df = df[:int(split * len(df))]\n",
     "\n",
     "train_dataset = CTLData(train_df, transform)\n",
-    "train_data_loader = DataLoader(train_dataset, batch_size=32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "device(type='cpu')"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "device"
+    "train_data_loader = DataLoader(train_dataset, batch_size=1)\n",
+    "\n",
+    "# take first 10 test samples\n",
+    "test_df = test_df[:10]"
    ]
   },
   {
@@ -227,13 +270,13 @@
     "num_epochs = 10\n",
     "losses = []\n",
     "for epoch in range(num_epochs):\n",
-    "    for _, product_img, cropped_scene_img, _, label in tqdm(train_data_loader):\n",
+    "    for i, product_img, cropped_scene_img, category, label in enumerate(tqdm(train_data_loader)):\n",
     "        product_img = product_img.to(device)\n",
     "        cropped_scene_img = cropped_scene_img.to(device)\n",
     "        label = label.float().to(device)\n",
     "\n",
     "        # forward\n",
-    "        output = model(cropped_scene_img, product_img)\n",
+    "        output = model(cropped_scene_img, product_img, category)\n",
     "\n",
     "        loss = loss_fn(output, label)\n",
     "\n",
@@ -251,6 +294,13 @@
     "plt.ylabel('Loss')\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
