use short category names

--- a/prep_data.ipynb
+++ b/prep_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,14 @@
     "import os\n",
     "import random\n",
     "from tqdm import tqdm\n",
+    "import functools\n",
     "\n",
     "DATA_PATH = './data/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +89,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crop_size(image, bbox):\n",
+    "    width, height = image.shape[1], image.shape[0]\n",
+    "    left = bbox[0] * width\n",
+    "    top = bbox[1] * height\n",
+    "    right = bbox[2] * width\n",
+    "    bottom = bbox[3] * height\n",
+    "\n",
+    "    # Calculate the four regions\n",
+    "    regions = [\n",
+    "        (0, 0, width, top),  # Top\n",
+    "        (0, bottom, width, height),  # Bottom\n",
+    "        (0, 0, left, height),  # Left\n",
+    "        (right, 0, width, height),  # Right\n",
+    "    ]\n",
+    "\n",
+    "    # Find the largest region\n",
+    "    largest_region = max(regions, key=lambda r: (r[2]-r[0]) * (r[3]-r[1]))\n",
+    "\n",
+    "    # compute size of cropped image\n",
+    "    cropped_width = largest_region[2] - largest_region[0]\n",
+    "    cropped_height = largest_region[3] - largest_region[1]\n",
+    "\n",
+    "    return cropped_width, cropped_height"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,17 +175,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 72198/72198 [49:43<00:00, 24.20it/s]  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ctl_data = pd.DataFrame(columns=['scene_id', 'product_id', 'bbox', 'category', 'label'])\n",
     "for i in tqdm(range(len(fashion))):\n",
@@ -161,7 +185,7 @@
     "    scene_id = row['scene']\n",
     "    product_id = row['product']\n",
     "    bbox = row['bbox']\n",
-    "    category = categories[product_id]\n",
+    "    category = categories[product_id].split('|')[-1]\n",
     "\n",
     "    # add to dataframe\n",
     "    new_row = pd.DataFrame({'scene_id': [scene_id], 'product_id': [product_id], 'bbox': [bbox], 'category': [category], 'label': [1]})\n",
@@ -183,33 +207,6 @@
     "# save to csv\n",
     "ctl_data.to_csv(DATA_PATH + 'ctl/data.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['Shoes', 'Handbags, Wallets & Cases', 'Pants', 'Shirts & Tops', 'Sunglasses', 'Coats & Jackets', 'Earrings', 'Shorts', 'Skirts', 'Necklaces'])"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "category_to_product.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
