--- a/model.ipynb
+++ b/model.ipynb
@@ -128,13 +128,6 @@
         "        bbox = [float(x) for x in row['bbox'][1:-1].split(',')]\n",
         "        cropped_scene_img = self._crop_img(scene_img, bbox)\n",
         "\n",
-        "        # print size of cropped image\n",
-        "        # print(cropped_scene_img.size)\n",
-        "\n",
-        "        # scene_img = torch.from_numpy(np.array(scene_img))\n",
-        "        # product_img = torch.from_numpy(np.array(product_img))\n",
-        "        # cropped_scene_img = torch.from_numpy(np.array(cropped_scene_img))\n",
-        "\n",
         "        if self.transform:\n",
         "            scene_img = self.transform(scene_img)\n",
         "            product_img = self.transform(product_img)\n",
@@ -158,14 +151,13 @@
         "        self.feature_extractor = feature_extractor\n",
         "\n",
         "        # two layer feed forward network to tranform features into d-dim embedding with unit length\n",
-        "        # Linear-BN-Relu-Dropout-Linear-Norm\n",
         "        self.feed_forward = torch.nn.Sequential(\n",
         "            torch.nn.Linear(1000, embed_dim),\n",
-        "            # torch.nn.BatchNorm1d(embed_dim),\n",
+        "            torch.nn.BatchNorm1d(embed_dim),\n",
         "            torch.nn.ReLU(),\n",
         "            torch.nn.Dropout(0.2),\n",
         "            torch.nn.Linear(embed_dim, embed_dim),\n",
-        "            # torch.nn.BatchNorm1d(embed_dim),\n",
+        "            torch.nn.BatchNorm1d(embed_dim),\n",
         "            torch.nn.ReLU(),\n",
         "        )\n",
         "        self.feed_forward.to(device)\n",
@@ -304,7 +296,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -313,13 +305,25 @@
         "id": "pdTf1DWCtDiY",
         "outputId": "f6f55773-809a-4530-a523-980c97bbac6f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'positive_loader' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[16], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m i \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[1;32m      8\u001b[0m \u001b[39mfor\u001b[39;00m epoch \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(num_epochs):\n\u001b[1;32m      9\u001b[0m     \u001b[39m# zip the positive and negative loaders to create pairs\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m     \u001b[39mfor\u001b[39;00m (pos_product_img, pos_cropped_scene_img, pos_category, _), (neg_product_img, neg_cropped_scene_img, neg_category, _) \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(tqdm(positive_loader), negative_loader):\n\u001b[1;32m     11\u001b[0m         pos_product_img \u001b[39m=\u001b[39m pos_product_img\u001b[39m.\u001b[39mto(device)\n\u001b[1;32m     12\u001b[0m         pos_cropped_scene_img \u001b[39m=\u001b[39m pos_cropped_scene_img\u001b[39m.\u001b[39mto(device)\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'positive_loader' is not defined"
+          ]
+        }
+      ],
       "source": [
         "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
         "\n",
         "num_epochs = 10\n",
         "losses = []\n",
-        "margin = 1.0\n",
+        "alpha = 0.5\n",
         "epochs = []\n",
         "i = 0\n",
         "for epoch in range(num_epochs):\n",
@@ -338,8 +342,10 @@
         "        neg_output = model(neg_cropped_scene_img, neg_product_img, neg_category)\n",
         "\n",
         "        # compute hinge loss\n",
-        "        # hinge loss is max(0, margin - pos_output + neg_output)\n",
-        "        loss = torch.clamp(margin - pos_output + neg_output, min=0)\n",
+        "        # hinge loss is max(0, alpha + pos_output - neg_output)\n",
+        "        loss = torch.clamp(alpha + pos_output - neg_output, min=0)\n",
+        "\n",
+        "        loss = loss.mean()\n",
         "\n",
         "        # backward and optimize\n",
         "        optimizer.zero_grad()\n",
